fixed y overflow of notes menu

--- a/components/NotesMenu/NotesMenu.module.scss
+++ b/components/NotesMenu/NotesMenu.module.scss
@@ -6,7 +6,6 @@
     min-width: 200px;
     color: #8e94b2;
     background-color: #1b1e2b;
-    overflow-y: auto;
     > * {
         padding: 0 1rem;
     }
